--- a/style.css
+++ b/style.css
@@ -65,7 +65,9 @@ font-size: 16px;
 body {
     font-family: Arial, sans-serif;
     margin: 0%;
-    padding: 0%;   
+    padding: 0%;
+    background-image: url("yaskwin.jpg"); 
+    background-size: cover;  
 }
 
 h2 {
@@ -104,4 +106,13 @@ li {
 
 .instagram {
     color: #c13584;
+}
+
+
+
+#yasmin-image {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
 }
