--- a/style2.css
+++ b/style2.css
@@ -3,6 +3,7 @@ body {
     font-size: 16px;
     text-align: center;
     background-color: azure;
+    padding: 0%;
 }
 header {
     background-color: #f2f2f2;
