--- a/portfoliotemplate/css/main.css
+++ b/portfoliotemplate/css/main.css
@@ -1294,7 +1294,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #intro {
-	background: #151515 url(../images/IMG_20240322_143645_622.jpg) no-repeat center bottom;
+	background: #151515 url(../images/CYIMAHE1.jpg) no-repeat center bottom;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
