--- a/portfoliotemplate/css/main.css
+++ b/portfoliotemplate/css/main.css
@@ -1312,7 +1312,7 @@ header .logo a {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: #111111;
+	background: #241b1b;
 	opacity: .85;
 }
 
@@ -2095,7 +2095,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #services {
-	background: #313131 url(../images/bg.jpg) no-repeat center;
+	background: #313131 url(../images/Portpic.jpg) no-repeat center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
