--- a/Final Activity/Technical Documentation Page/TechnicalDoc.css
+++ b/Final Activity/Technical Documentation Page/TechnicalDoc.css
@@ -2,82 +2,95 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     color: #333;
-    max-width: 800px;
-    margin: 0 auto;
-}
+    margin: 0;
+    padding: 0%;
+    display: flex;
+    min-height: 100vh;
 
-a {
-    color: #007bff;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
 }
 
 p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    color: #333;
+    line-height: 1.6;
     margin-bottom: 20px;
+}
+
+#navbar {
+    width: 20%;
+    position: sticky;
+    left: 0%;
+    top: 0%;
+    height: 100vh;
+    overflow: auto;
+    background-color: #f5f5f5;
+    border-right: 2px solid #eeeeee;
+}
+
+#navbar header {
+    padding: 20px;
+    font-size: 24px;
+    background: #333;
+    color: white;
+    text-align: center;
+
+}
+
+.nav-link {
+    padding: 10px 15px;
+    display: block;
+    color: #333;
+    text-decoration: none;
+
+}
+
+.nav-link:hover {
+    background-color: #ddd;
+}
+
+#main-doc {
+    flex: 1;
+    margin-left: 5%;
+    padding: 0 10px;
+
+}
+
+.main-section {
+    background-color: #f9f9f9;
+    margin: 10px 0;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.main-section header {
+    font-size: 20px;
+    margin-bottom: 15px;
+    color: #333;
 }
 
 code {
     display: block;
-    background-color: #f1f1f1;
-    padding: 10px;
-    border-radius: 5px;
-}
-
-ul {
-    list-style-type: disc;
-    padding-left: 20px;
+    padding: 5px;
+    background-color: #eeeeee;
+    border-left: 3px solid #f08080;
+    margin: 10px;
+    white-space: pre-wrap;
 }
 
 li {
-    margin-top: 5px;
+    margin: 5px 0;
 }
-
-nav {
-    width: 200px;
-    color: #2c2b30;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    align-items: flex-start;
-}
-
-nav header {
-    text-align: center;
-    margin-bottom: 30px;
-
-}
-
-nav a {
-    color: #ff7f50
-    padding: 5px 0;
-}
-
-nav a:hover {
-    background-color: #d4caca;
-}
-
-@media screen and (max-width: 768px) {
-    nav {
-        width: 100%;
+@media (max-width:768px) {
+    #navbar {
+        width: 100px;
+        height: auto;
         position: relative;
-        padding: 20px 0;
+        border-right: none;
     }
-
-
-nav a {
-    padding: 10px;
-}       
-
-}
-
-section header {
-    background-color: #b4b1b1;
-    color: #fff;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 10px;
+    #main-doc {
+        margin-left: 0;
+        margin-top: 20px;
+    }
 }
 
